--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 .title {
     color: white;
     text-align: center;
+    justify-content: center;
     font-family: myFirstFont;
     font-size: 90px;
 }
@@ -111,8 +112,6 @@ body {
 
 .nameEle {
     display: flex;
-    align-items: center;
-    justify-content: center;
     color: white;
     font-family: Bitcount;
     font-size: 25px;
@@ -123,17 +122,44 @@ body {
     opacity: 1;
 }
 
+#arena {
+    display: flex;
+    flex-direction: row;
+}
+
+.fighter-column {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.bargreen {
+    --p1: 25%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    background-image: linear-gradient(
+        to right,
+        rgb(8, 98, 0) calc(var(--p1) - 1%),
+        rgba(8, 98, 0, 0) calc(var(--p1) + 1%)
+
+    );
+}
+
+.resultText {
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
 .result {
-    
     display: flex;
     flex-direction: column;
-    text-align: left;
     justify-content: center;
-    margin: auto;
+    text-align: left;
     font-family: Bitcount;
     color: rgb(255, 255, 255);
     background: black;
-
     --p1: 25%;
     --p2: 75%;
     background-image:
@@ -145,28 +171,24 @@ body {
     background-repeat: no-repeat;
     border: 1px solid #ffffff;
     border-radius: 4px;
-    width: 50%;
     text-indent: 3%;
-    transition: border 0.3s, width 0.3s ease, filter 0.3s ease, opacity 0.3s ease;
+    transition: border 0.3s, width 0.3s ease, filter 0.3s ease, opacity 0.3s ease, height 300ms ease;
     overflow: hidden;
     filter: blur(0px);
     opacity: 1;
 }
+
 .result:hover {
     border: 4px solid #ffffff;
 }
 
+
 .barwins{
     font-family: Bitcount;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    margin-top: 0%;
     background: none;
     border-radius: 4px;
     color: white;
-    width: 50%;
     height: 20px;
     border: 1px solid #ffffff;
     transition: border 0.3s, width 0.3s ease, filter 0.3s ease, opacity 0.3s ease;
@@ -180,13 +202,8 @@ body {
 }
 
 .bartext {
-    margin-top: 0%;
     font-family: Bitcount;
     color: white;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-right: auto;
     transition: border 0.3s, width 0.3s ease, filter 0.3s ease, opacity 0.3s ease;
     overflow: hidden;
     filter: blur(0px);
@@ -195,9 +212,6 @@ body {
 
 .barwinside{
     color: rgb(255, 255, 255);
-    align-items: center;
-    justify-content: center;
-    margin: auto;
     border-radius: 4px;
     display: flex;
     height: 100%;
@@ -208,9 +222,6 @@ body {
     opacity: 1;
 }
 .barloseside{
-    align-items: center;
-    justify-content: center;
-    margin: auto;
     color: rgb(255, 255, 255);
     border-radius: 4px;
     display: flex;
@@ -223,9 +234,6 @@ body {
 }
 
 .bardrawside{
-    align-items: center;
-    justify-content: center;
-    margin: auto;
     border-radius: 4px;
     color: rgb(255, 255, 255);
     display: flex;
@@ -253,13 +261,15 @@ body {
     text-align: left;
     flex-direction: column;
     margin: auto;
-    width: 50%;
+    width: 40%;
     border: 1px solid white;
     border-radius: 4px;
     --p3: 50%;
     background-image: linear-gradient(to right, grey, var(--p3), rgb(128,128,205));
     transition: border 0.3s;
+    overflow-anchor: none;
 }
+
 
 .suggestions:hover {
     border: 4px solid white;
@@ -272,6 +282,21 @@ body {
     margin-bottom: 10%;
     
 }
+
+.suggestion-row {
+    display: flex;
+    align-items: center;
+}
+
+.suggestion-row button:first-child {
+    flex-grow: 1;
+    text-align: left;
+}
+
+.suggestions button.compare {
+    margin-left: 1rem;
+}
+
 
 .suggestions button {
     flex-direction: column;
@@ -291,19 +316,47 @@ body {
     font-size: 20px;
 }
 
-@media (max-width: 768px) {
-    .result,
+.suggestions button.compare {
+    flex-direction: row;
+    background: none;
+    border: 2px;
+    padding: 0;
+    margin: 0;
+    font-family: Bitcount;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    text-align: right;
+    transition: font-size 0.3s;
+}
+
+@media (max-width: 850px) {
     .barwins,
     .suggestions,
     .mainsearch {
         width: 90%;
     }
-
     .title {
         font-size: 30px;
+        padding-top: 5%;
     }
     .nameEle {
         font-size: 20px;
     }
 
+}
+
+.fighter-image {
+    width: 200px;
+    max-width: 90%;
+    margin: auto;
+    border-radius: 8px;
+    display: flex;
+    border: 2px solid white;
+}
+
+/* empty box to stop website jumping */
+.emptybot {
+    width: 200px;
+    height: 800px;
+    background: none;
 }
