--- a/style.css
+++ b/style.css
@@ -136,20 +136,21 @@ body {
 }
 
 .bargreen {
+
+    padding: 2% 1%;
+
     --p1: 25%;
-    margin-top: 3%;
-    margin-bottom: 3%;
+
     background-image: linear-gradient(
         to right,
         rgb(8, 98, 0) calc(var(--p1) - 1%),
         rgba(8, 98, 0, 0) calc(var(--p1) + 1%)
-
     );
+
 }
 
 .resultText {
-    margin-top: 3%;
-    margin-bottom: 3%;
+    padding: 2% 1%;
 }
 
 .result {
